Fix z-index review-improved

--- a/public/css/sass/review_improved.scss
+++ b/public/css/sass/review_improved.scss
@@ -248,7 +248,7 @@ section {
     top: 0;
     right: 0;
     width: 22%;
-    z-index: 999;
+    z-index: 10;
     min-width:215px;
     margin-top: 49px;
     text-align: left ;
